@@ -22,7 +22,7 @@
   <email>chuck@horde.org</email>
   <active>no</active>
  </lead>
- <date>2018-07-04</date>
+ <date>2018-09-26</date>
  <version>
   <release>4.2.25</release>
   <api>4.2.0</api>
@@ -33,8 +33,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mjr] SECURITY: Fix XSS vulnerability in resource group property view (Bug #14857).
 * [mjr] SECURITY: Fix XSS vulnerability in event URL field (Bug #14857).
-* |+
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -4198,11 +4198,11 @@
     <release>stable</release>
     <api>stable</api>
    </stability>
-   <date>2018-07-04</date>
+   <date>2018-09-26</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mjr] SECURITY: Fix XSS vulnerability in resource group property view (Bug #14857).
 * [mjr] SECURITY: Fix XSS vulnerability in event URL field (Bug #14857).
-* |+
    </notes>
   </release>
   <release>
