@@ -2,8 +2,9 @@
 v4.2.25
 -------
 
+[mjr] SECURITY: Fix XSS vulnerability in resource group property view (Bug
+      #14857).
 [mjr] SECURITY: Fix XSS vulnerability in event URL field (Bug #14857).
-|+
 
 
 -------
